# MMUDD

./: CMakeLists.txt
distortion_plugin/: distortion_plugin.cpp  distortion_plugin.h
distortion_plugin/include/distortion/: BypassTransitionSmoother.h  CustomLookAndFeel.h  JsonSerializer.h  Parameters.h  PluginEditor.h  PluginProcessor.h  distortion.h
distortion_plugin/source/: CustomLookAndFeel.cpp  JsonSerializer.cpp  Parameters.cpp  PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: BypassTransitionSmootherTest.cpp  JsonSerializerTest.cpp  PluginProcessorTest.cpp  TestUtils.h  TremoloTest.cpp
